Fixing body not fitting width on smaller displays.

--- a/output.css
+++ b/output.css
@@ -820,7 +820,6 @@ nav {
   .intro-background {
     width: 100%;
     overflow-x: hidden;
-    touch-action: none;
   }
   main {
     width: 100%;
@@ -830,7 +829,6 @@ nav {
     height: 100%;
     width: 100%;
     overflow-x: hidden;
-    touch-action: none;
   }
   .container {
     width: auto;
