--- a/style.scss
+++ b/style.scss
@@ -835,7 +835,6 @@ nav{
   .intro-background{
     width: 100%;
     overflow-x: hidden;
-    touch-action: none;
   }
 
   main{
@@ -847,7 +846,6 @@ nav{
     height: 100%;
     width: 100%;
     overflow-x: hidden;
-    touch-action: none;
   }
 
   .container{
